:sparkles: Added a couple more arguments for commands. Edited CommandManager to be more usable in codebases.