@@ -3,6 +3,7 @@ package xyz.bitsquidd.bits.lib.command.params;
 import xyz.bitsquidd.bits.lib.command.CommandContext;
 import xyz.bitsquidd.bits.lib.command.exceptions.ArgumentParseException;
 
+import java.util.Collections;
 import java.util.List;
 
 public interface CommandArgument<T> {
@@ -14,7 +15,7 @@ public interface CommandArgument<T> {
         return 1;
     }
     default List<String> tabComplete(CommandContext context, int startIndex) {
-        return List.of("");
+        return Collections.emptyList();
     }
 
     default boolean canParseFull(CommandContext context, int startIndex) {
